remove scope and and elo to user
