# server/src/services/user.service.ts
@@ -26,7 +26,7 @@ export class UserService {
     password: string,
   ): Promise<UserOutputDTO> {
     return UserMapper.toOutputDto(
-      await User.create({ username: username, password: password, role: "user" }),
+      await User.create({ username: username, password: password, elo: 0 }),
     );
   }
 
